# agent-seddon

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  buf.yaml  flake.nix
crates/agent-cache/: Cargo.toml
crates/agent-cache/benches/: place.rs
crates/agent-cache/src/: key.rs  lib.rs
crates/agent-cache/tests/: leak.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/examples/: custom_provider.rs
crates/agent-cli/src/: grpc_server.rs  main.rs  mcp_server.rs  metrics_server.rs  repl.rs
crates/agent-cli/tests/: cli_e2e.rs  mcp_roundtrip.rs  repl_pty.rs  review_e2e.rs
crates/agent-cli/tests/common/: mod.rs
crates/agent-context/: Cargo.toml
crates/agent-context/benches/: context.rs
crates/agent-context/src/: lib.rs  sliding_window.rs  summarizing.rs
crates/agent-core/: Cargo.toml
crates/agent-core/benches/: registry.rs
crates/agent-core/src/: lib.rs
crates/agent-embed/: Cargo.toml
crates/agent-embed/src/: lib.rs  local.rs
crates/agent-export/: Cargo.toml
crates/agent-export/benches/: render.rs
crates/agent-export/src/: lib.rs  redact.rs  render.rs
crates/agent-export/tests/: leak.rs
crates/agent-forge/: Cargo.toml
crates/agent-forge/src/: github.rs  gitlab.rs  http.rs  lib.rs
crates/agent-forge/tests/: http_e2e.rs
crates/agent-git/: Cargo.toml
crates/agent-git/src/: cache.rs  cli.rs  lib.rs  paths.rs
crates/agent-git/tests/: objects_fixture.rs
crates/agent-grpc/: Cargo.toml
crates/agent-grpc/src/: client.rs  constants.rs  lib.rs  server.rs  transport.rs
crates/agent-grpc/src/client/: context.rs  embed.rs  exec.rs  forge.rs  llm_pool.rs  lsp.rs  memory.rs  mod.rs  policy.rs  provider.rs  reference.rs  repo.rs  review.rs  scanner.rs  scheduler.rs  search.rs  session.rs  tokenizer.rs  tools.rs  web.rs
crates/agent-grpc/src/server/: context.rs  embed.rs  exec.rs  forge.rs  health.rs  llm_pool.rs  lsp.rs  memory.rs  mod.rs  policy.rs  provider.rs  reference.rs  repo.rs  review.rs  scanner.rs  scheduler.rs  search.rs  session.rs  tokenizer.rs  tools.rs  web.rs
crates/agent-grpc/tests/: exec_roundtrip.rs  forge_roundtrip.rs  gateway.rs  lsp_roundtrip.rs  memory_layers_roundtrip.rs  pool_review_roundtrip.rs  reference_scheduler_roundtrip.rs  roundtrip.rs  scanner_roundtrip.rs  session_roundtrip.rs  tokenizer_embed_roundtrip.rs  web_roundtrip.rs
crates/agent-grpc/tests/common/: mod.rs
crates/agent-lsp/: Cargo.toml
crates/agent-lsp/benches/: lsp_parse.rs
crates/agent-lsp/src/: client.rs  lib.rs  manager.rs  parse.rs  protocol.rs  testing.rs  transport.rs
crates/agent-lsp/tests/: leak.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: http.rs  lib.rs  stdio.rs
crates/agent-mcp/tests/: stdio_transport.rs
crates/agent-memory/: Cargo.toml
crates/agent-memory/src/: file.rs  lib.rs
crates/agent-metrics/: Cargo.toml
crates/agent-metrics/benches/: metrics.rs
crates/agent-metrics/src/: lib.rs
crates/agent-metrics/tests/: leak.rs
crates/agent-proto/: Cargo.toml  buf.image.binpb  build.rs
crates/agent-proto/proto/agent/v1/: common.proto  context.proto  embed.proto  exec.proto  forge.proto  llm_pool.proto  lsp.proto  memory.proto  policy.proto  provider.proto  reference.proto  repo.proto  review.proto  scanner.proto  scheduler.proto  search.proto  session.proto  tokenizer.proto  tool.proto  web.proto
crates/agent-proto/src/: convert.rs  lib.rs  trace.rs
crates/agent-providers/: Cargo.toml
crates/agent-providers/src/: anthropic.rs  lib.rs  openai_compat.rs  pool.rs  retry.rs  router.rs
crates/agent-providers/tests/: retry_e2e.rs
crates/agent-pty/: Cargo.toml
crates/agent-pty/src/: buffer.rs  lib.rs
crates/agent-pty/tests/: pty_e2e.rs
crates/agent-reference/: Cargo.toml
crates/agent-reference/benches/: parse.rs
crates/agent-reference/src/: lib.rs  parse.rs  resolver.rs
crates/agent-reference/tests/: leak.rs
crates/agent-retry/: Cargo.toml
crates/agent-retry/src/: grpc.rs  http.rs  lib.rs
crates/agent-review/: Cargo.toml
crates/agent-review/src/: analyzer.rs  callgraph.rs  churn.rs  classifier.rs  cochange.rs  collector.rs  lib.rs  orchestrator.rs  repo_facts.rs  risk.rs  salience.rs  signatures.rs  style.rs  summaries.rs  util.rs
crates/agent-review/tests/: churn_e2e.rs  cochange_e2e.rs  context_render.rs  repo_facts_e2e.rs  revs_target.rs  summaries_e2e.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: agent.rs  builder.rs  config.rs  context_files.rs  git.rs  hooks.rs  lib.rs  metered.rs  metrics.rs  policy.rs  registry.rs  search.rs  session_store.rs  skills.rs  structured.rs  subagent.rs
crates/agent-runtime/tests/: config_unknown_keys.rs  grpc_e2e.rs  loop_e2e.rs  verifier_e2e.rs
crates/agent-sandbox/: Cargo.toml
crates/agent-sandbox/src/: lib.rs  local.rs  nix.rs
crates/agent-sandbox/tests/: leak.rs
crates/agent-scanner/: Cargo.toml
crates/agent-scanner/benches/: scan.rs
crates/agent-scanner/src/: dispatch.rs  lib.rs  secret.rs  threat.rs
crates/agent-scanner/tests/: leak.rs
crates/agent-scheduler/: Cargo.toml
crates/agent-scheduler/benches/: next_fire.rs
crates/agent-scheduler/src/: lib.rs  schedule.rs
crates/agent-search/: Cargo.toml
crates/agent-search/benches/: vector.rs
crates/agent-search/src/: lib.rs  manifest.rs  tantivy.rs  vector.rs
crates/agent-search/tests/: index_fixture.rs  leak.rs
crates/agent-search/tests/fixtures/tree/: flake.nix
crates/agent-session/: Cargo.toml
crates/agent-session/benches/: checkpoint.rs
crates/agent-session/src/: file.rs  lib.rs
crates/agent-session/tests/: leak.rs
crates/agent-tasks/: Cargo.toml
crates/agent-tasks/src/: lib.rs  memory.rs
crates/agent-tasks/tests/: leak.rs
crates/agent-telemetry/: Cargo.toml
crates/agent-telemetry/src/: layer.rs  lib.rs  memory.rs  otel.rs  rows.rs  writer.rs
crates/agent-testkit/: Cargo.toml
crates/agent-testkit/src/: bench.rs  lib.rs  observe.rs
crates/agent-tokenizer/: Cargo.toml
crates/agent-tokenizer/benches/: tokenize.rs
crates/agent-tokenizer/src/: approx.rs  cost.rs  lib.rs
crates/agent-tokenizer/tests/: leak.rs
(+192 files in other folders)
