[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/agent-providers",
    "crates/agent-tools",
    "crates/agent-memory",
    "crates/agent-context",
    "crates/agent-mcp",
    "crates/agent-telemetry",
    "crates/agent-runtime",
    "crates/agent-cli",
    "crates/agent-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
tracing = "0.1"

# streaming (SSE) + concurrent tool execution
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
# interactive REPL line editing + history
rustyline = "14"
# gitignore-aware file walking + regex for the search tools
ignore = "0.4"
regex = "1"
# table-driven test cases (dev-only)
rstest = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# telemetry / ClickHouse (native protocol, port 9000)
klickhouse = "0.13"
uuid = { version = "1", features = ["v4"] }

# metrics — text exposition only (no protobuf/push features)
prometheus = { version = "0.13", default-features = false }
tiny_http = "0.12"

# internal crates (the seams). The pluggable impl crates default to no features
# when consumed as deps, so `agent-runtime` selects modules explicitly (and a
# `--no-default-features` build of the runtime truly drops them).
agent-core = { path = "crates/agent-core" }
agent-providers = { path = "crates/agent-providers", default-features = false }
agent-tools = { path = "crates/agent-tools", default-features = false }
agent-memory = { path = "crates/agent-memory", default-features = false }
agent-context = { path = "crates/agent-context", default-features = false }
agent-mcp = { path = "crates/agent-mcp" }
agent-telemetry = { path = "crates/agent-telemetry" }
agent-runtime = { path = "crates/agent-runtime" }
# shared test doubles (dev-dependency only — never in a release build)
agent-testkit = { path = "crates/agent-testkit" }
