[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/agent-metrics",
    "crates/agent-retry",
    "crates/agent-providers",
    "crates/agent-tools",
    "crates/agent-search",
    "crates/agent-git",
    "crates/agent-memory",
    "crates/agent-context",
    "crates/agent-tokenizer",
    "crates/agent-web",
    "crates/agent-tasks",
    "crates/agent-validate",
    "crates/agent-lsp",
    "crates/agent-sandbox",
    "crates/agent-embed",
    "crates/agent-session",
    "crates/agent-reference",
    "crates/agent-scanner",
    "crates/agent-cache",
    "crates/agent-web-search",
    "crates/agent-export",
    "crates/agent-forge",
    "crates/agent-scheduler",
    "crates/agent-pty",
    "crates/agent-grpc",
    "crates/agent-mcp",
    "crates/agent-proto",
    "crates/agent-telemetry",
    "crates/agent-runtime",
    "crates/agent-cli",
    "crates/agent-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# URL parsing for the SSRF guard (robust host/scheme extraction; already in-tree via reqwest).
url = "2"
toml = "0.8"
# Collects the config keys serde IGNORED during deserialization, so a misplaced
# or misspelled key can be warned about instead of silently doing nothing. See
# `parse_config`.
serde_ignored = "0.1"
tracing = "0.1"

# streaming (SSE) + concurrent tool execution
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
# interactive REPL line editing + history
rustyline = "14"
# gitignore-aware file walking + regex for the search tools
ignore = "0.4"
regex = "1"
# table-driven test cases (dev-only)
rstest = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
# performance benchmarks — deterministic instruction counts via callgrind, so a
# regression fails a stateless `nix flake check` (dev-only; needs valgrind + the
# matching `iai-callgrind-runner`, both pinned in nix/versions.nix).
iai-callgrind = "0.16"
# heap profiler for allocation-budget + leak assertions in targeted tests. Behind
# a per-crate `dhat-heap` feature so its `#[global_allocator]` is never in a normal
# build (dev-only).
dhat = "0.3"

# telemetry / ClickHouse (native protocol, port 9000)
klickhouse = "0.13"
uuid = { version = "1", features = ["v4"] }

# metrics — text exposition only (no protobuf/push features)
prometheus = { version = "0.13", default-features = false }
tiny_http = "0.12"

# gRPC / protobuf — the inter-component wire contracts (see crates/agent-proto).
# `tonic-build` invokes `protoc` at build time (supplied by the nix dev shell /
# crane; `PROTOC` env in nix/default.nix).
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
# gRPC server reflection (v1alpha) so `grpcurl` can introspect a `--serve-<seam>`
# process without the `.proto` files. Version-locked to `tonic`.
tonic-reflection = "0.12"
# The standard `grpc.health.v1` service, so an orchestrator can probe a
# `--serve-<seam>` process with the same check it uses for any other gRPC server
# rather than a bespoke endpoint. Version-locked to `tonic`, exactly like
# `tonic-reflection` above.
tonic-health = "0.12"
# gRPC transport plumbing: TCP + unix-domain-socket listeners/dialers.
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = "0.1"

# OpenTelemetry — distributed tracing exported over OTLP/gRPC to the ClickStack
# OTEL collector, layered onto `tracing` alongside the existing ClickHouse sink.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"

# internal crates (the seams). The pluggable impl crates default to no features
# when consumed as deps, so `agent-runtime` selects modules explicitly (and a
# `--no-default-features` build of the runtime truly drops them).
agent-core = { path = "crates/agent-core" }
agent-metrics = { path = "crates/agent-metrics" }
agent-retry = { path = "crates/agent-retry" }
agent-providers = { path = "crates/agent-providers", default-features = false }
agent-tools = { path = "crates/agent-tools", default-features = false }
agent-search = { path = "crates/agent-search", default-features = false }
agent-git = { path = "crates/agent-git", default-features = false }
agent-memory = { path = "crates/agent-memory", default-features = false }
agent-context = { path = "crates/agent-context", default-features = false }
agent-tokenizer = { path = "crates/agent-tokenizer", default-features = false }
agent-web = { path = "crates/agent-web", default-features = false }
agent-tasks = { path = "crates/agent-tasks", default-features = false }
agent-validate = { path = "crates/agent-validate", default-features = false }
agent-lsp = { path = "crates/agent-lsp", default-features = false }
agent-sandbox = { path = "crates/agent-sandbox", default-features = false }
agent-embed = { path = "crates/agent-embed", default-features = false }
agent-session = { path = "crates/agent-session", default-features = false }
agent-reference = { path = "crates/agent-reference", default-features = false }
agent-scanner = { path = "crates/agent-scanner", default-features = false }
agent-cache = { path = "crates/agent-cache", default-features = false }
agent-web-search = { path = "crates/agent-web-search", default-features = false }
agent-export = { path = "crates/agent-export", default-features = false }
agent-forge = { path = "crates/agent-forge", default-features = false }
agent-scheduler = { path = "crates/agent-scheduler", default-features = false }
agent-pty = { path = "crates/agent-pty", default-features = false }
agent-grpc = { path = "crates/agent-grpc" }
agent-mcp = { path = "crates/agent-mcp" }
agent-proto = { path = "crates/agent-proto" }
agent-telemetry = { path = "crates/agent-telemetry" }
agent-runtime = { path = "crates/agent-runtime" }
# shared test doubles (dev-dependency only — never in a release build)
agent-testkit = { path = "crates/agent-testkit" }
