[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-runtime.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
