[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-core.workspace = true
agent-runtime.workspace = true
agent-telemetry.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tiny_http.workspace = true
reqwest.workspace = true

[dev-dependencies]
# For the out-of-tree extension example (examples/custom_provider.rs).
agent-core.workspace = true
async-trait.workspace = true
