[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent-core.workspace = true
agent-runtime.workspace = true
agent-grpc.workspace = true
agent-telemetry.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tiny_http.workspace = true
reqwest.workspace = true
rustyline.workspace = true

[dev-dependencies]
# For the out-of-tree extension example (examples/custom_provider.rs).
agent-core.workspace = true
async-trait.workspace = true
# For the MCP client↔server round-trip integration test.
agent-mcp.workspace = true
# Table-driven tests (the seam table's completeness + flag parsing).
rstest.workspace = true

# Pty-driven CLI tests (tests/repl_pty.rs). Unix-only: it spawns the binary on a
# real terminal to reach the REPL's line editor and the policy guard's operator
# prompt, neither of which a pipe can exercise.
[target.'cfg(unix)'.dev-dependencies]
rexpect.workspace = true
