[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-core.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true }
rstest.workspace = true
