[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-core.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true }
rstest.workspace = true
iai-callgrind.workspace = true

# The loop calls `ToolRegistry::describe_all` once per turn to assemble the tool
# schemas; this guards that per-turn cost (sort + clone) against regression.
[[bench]]
name = "registry"
harness = false
