[package]
name = "agent-embed"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# The `local` feature-hashing embedder is dependency-free + deterministic — the
# default. Real semantic models (`embed-openai` API, `embed-grpc` remote worker)
# are follow-ups so the default build stays hermetic (no model/network). See
# docs/components/embedder.md and parity spec 15.
default = ["embed-local"]
embed-local = []
# Injects a dhat global allocator for the allocation-budget leak test only.
dhat-heap = ["dep:dhat"]

[dependencies]
agent-core.workspace = true
async-trait.workspace = true
dhat = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
rstest.workspace = true
