[package]
name = "agent-forge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["forge-github", "forge-gitlab"]
forge-github = []
forge-gitlab = []

[dependencies]
agent-core.workspace = true
agent-retry.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
rstest.workspace = true
tiny_http.workspace = true
