[package]
name = "agent-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# The git CLI backend is the default: zero new dependencies (it shells out to the
# user's `git`, exactly matching their config/hooks/credentials) and the only path
# that builds inside the hermetic Nix vendor cache without extra vendoring. The
# `git-hybrid` backend (in-process `gix` object reads + git-CLI worktree/ref
# writes) is reserved for a follow-up that also updates Cargo.lock + the crane
# vendor hashes. See docs/components/git.md.
default = ["git-cli"]
# All-shell-out RepoBackend over the `git` CLI.
git-cli = []
# In-process gix reads + git-CLI writes (adds the `gix` dependency).
git-hybrid = ["git-cli"]

[dependencies]
agent-core.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
agent-testkit.workspace = true
