[package]
name = "agent-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC transport for the agent-seddon seams: per-seam servers + clients over TCP or unix domain sockets"

[dependencies]
agent-core = { workspace = true }
agent-proto = { workspace = true }
# The one canonical retry/backoff library (gRPC overload-code classifier).
agent-retry = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# W3C trace-context propagation across the gRPC hop.
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
# The real session store, so the round-trip asserts the store's own properties
# (content-addressed dedup, undo-as-pointer-move) across the wire, not a double.
agent-session = { workspace = true, features = ["session-file"] }
agent-testkit = { workspace = true }
# A real built-in tool, to prove a feature tool (not just EchoTool) roundtrips over
# the ToolService seam. Only the patch tool is compiled in.
agent-tools = { workspace = true, features = ["tool-core", "tool-patch"] }
rstest = { workspace = true }
