[package]
name = "agent-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["stream"] }
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true }
