[package]
name = "agent-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["memory-file"]
# JSONL episodic log + markdown semantic store (keyword recall).
memory-file = []

[dependencies]
agent-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
