[package]
name = "agent-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Router: composes N providers behind the LlmProvider trait (parity spec 25).
provider-router = []
# Pool: a health-checked, tiered pool with parallel fan-out. Reuses the router's
# circuit breaker, so it implies `provider-router`.
provider-pool = ["provider-router"]
default = ["provider-openai-compat"]
# OpenAI-compatible /chat/completions (covers GLM, OpenAI, vLLM, Ollama, …).
provider-openai-compat = []
# Anthropic-native Messages API.
provider-anthropic = []

[dependencies]
agent-core.workspace = true
# The one canonical retry/backoff library — never hand-roll a retry loop.
agent-retry.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream"] }
tracing.workspace = true
futures-util.workspace = true
async-stream.workspace = true
# `tokio::time::sleep` for the retry backoff (the runtime is already tokio).
tokio = { workspace = true }

[dev-dependencies]
agent-testkit.workspace = true
agent-cache.workspace = true
rstest.workspace = true
tokio = { workspace = true }
