[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# The batteries-included default. Grows as each milestone's modules land
# (provider-anthropic, tool-edit, tool-search are added in their milestones).
default = [
    "provider-openai-compat",
    "provider-anthropic",
    "tool-core",
    "tool-edit",
    "tool-search",
    "context-sliding-window",
    "context-summarizing",
    "memory-file",
    "mcp",
    "subagents",
]

# Each feature forwards to the owning impl crate + drives `register_builtins`.
provider-openai-compat = ["agent-providers/provider-openai-compat"]
provider-anthropic = ["agent-providers/provider-anthropic"]
tool-core = ["agent-tools/tool-core"]
tool-edit = ["agent-tools/tool-edit"]
tool-search = ["agent-tools/tool-search"]
context-sliding-window = ["agent-context/context-sliding-window"]
context-summarizing = ["agent-context/context-summarizing"]
memory-file = ["agent-memory/memory-file"]
# Connect to external MCP servers and register their tools.
mcp = ["dep:agent-mcp"]
# Expose a `delegate` tool that spawns child agents (isolated context).
subagents = []

[dependencies]
agent-core.workspace = true
# These default to no features (see workspace deps); features below opt in.
agent-providers.workspace = true
agent-tools.workspace = true
agent-memory.workspace = true
agent-context.workspace = true
agent-mcp = { workspace = true, optional = true }
agent-telemetry.workspace = true
async-trait.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
prometheus.workspace = true

[dev-dependencies]
agent-testkit.workspace = true
rstest.workspace = true
